# breadbin

./: .gitignore  Cargo.toml  Makefile  README.md  bb-cover  breadbin  breadbin.sh  build_index.py  c64_avail.tsv  c64_index.tsv  c64_popularity.tsv  c64disk  c64get  c64info  c64kiosk  c64menu  c64run  c64tosec  covers_index.tsv  ia_index.tsv  pack-macos.sh  setup-dependencies.sh  uta_index.html
crates/breadbin-core/: Cargo.toml
crates/breadbin-core/src/: audio.rs  build_index.rs  core.rs  cover.rs  demos.rs  disk.rs  get.rs  info.rs  lib.rs  library.rs  roms.rs  run.rs  tui.rs  tunes.rs
crates/breadbin-core/tests/: cli.rs
crates/breadbin-gui/: Cargo.toml
crates/breadbin-gui/data/: gschemas.compiled  io.github.jacobandresen.Breadbin.gschema.xml  style.css
crates/breadbin-gui/src/: app.rs  config.rs  demos.rs  kiosk.rs  main.rs  task.rs  tunes.rs
docs/: native-app-implementation.md  native-app-plan.md
packaging/: breadbin.desktop  install.sh
packaging/arch/: PKGBUILD  breadbin.install
packaging/debian/: breadbin.postinst  changelog  control  rules
rust/: Cargo.toml  PORTING.md  README.md
rust/src/: boot.rs  build_index.rs  collections.tsv  core.rs  demos.rs  disk.rs  get.rs  grid.rs  kiosk.rs  main.rs  menu.rs  run.rs  sid.rs  tosec.rs  tui.rs  tunes.rs
