[workspace]
resolver = "2"
members = ["crates/breadbin-core", "crates/breadbin-gui"]

[profile.release]
strip = true

# reSID's fixpoint resampler relies on wrapping integer arithmetic; disable overflow
# checks for it in debug so it behaves like release (see original Cargo.toml note).
[profile.dev.package.resid-rs]
overflow-checks = false
